@@ -6,9 +6,12 @@
 #include <lualib.h>
 #include <lauxlib.h>
 
-#if LUA_VERSION_NUM > 501
+#if LUA_VERSION_NUM >= 501
+#	undef luaL_reg
 #	define luaL_reg luaL_Reg
+#	undef luaL_putchar
 #	define luaL_putchar(B, c) luaL_addchar(B, c)
+#	undef luaL_typerror
 #	define luaL_typerror(L, n, t) luax_typerror(L, n, t)
 
 extern int luax_typerror(lua_State *L, int narg, const char *type);
